Wrong color fix
copy pasta problem

--- a/themes/Modern/styles.css
+++ b/themes/Modern/styles.css
@@ -408,19 +408,19 @@ pre {
 }
 /*Prefere having OS icon on hover*/
 li.win32 a:hover{
-	background: #999 url('../../images/os/win32.png') no-repeat 97% center !important;
+	background: #7f7f7f url('../../images/os/win32.png') no-repeat 97% center !important;
 	background-size: 20px auto;
 }
 li.linux32 a:hover{
-	background: #999 url('../../images/os/linux32.png') no-repeat 97% center !important;
+	background: #7f7f7f url('../../images/os/linux32.png') no-repeat 97% center !important;
 	background-size: 20px auto;
 }
 li.win64 a:hover{
-	background: #999 url('../../images/os/win64.png') no-repeat 97% center !important;
+	background: #7f7f7f url('../../images/os/win64.png') no-repeat 97% center !important;
 	background-size: 20px auto;
 }
 li.linux64 a:hover{
-	background: #999 url('../../images/os/linux64.png') no-repeat 97% center !important;
+	background: #7f7f7f url('../../images/os/linux64.png') no-repeat 97% center !important;
 	background-size: 20px auto;
 }
 .menu li ul{
